manifests/deployment.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tutorial3
  annotations:
    fluxcd.io/automated: "true"
spec:
  replicas: 1
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
  minReadySeconds: 5
  template:
    metadata:
      labels:
        app: tutorial3
    spec:
      containers:
      - name: tutorial3
        image: docker.io/spcsenti/tutorial2-src:latest
        ports:
        - containerPort: 3000
        resources:
          requests:
            cpu: 250m
          limits:
            cpu: 500m
