manifests/service.yml
apiVersion: v1
kind: Service
metadata:
  name: tutorial-frontend
spec:
  type: LoadBalancer
  ports:
    - port: 3000
      targetPort: 5000
  selector:
    app: tutorial-frontend
