manifests/route.yml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    app: tutorial3
  name: tutorial3
spec:
  port:
    targetPort: 3000
  to:
    kind: Service
    name: tutorial3
    weight: 100
